--- a/.github/workflows/deploy-backend.yml
+++ b/.github/workflows/deploy-backend.yml
@@ -23,14 +23,17 @@ jobs:
           script: |
             echo "Connected to EC2 Backend"
             
-            cd /home/ec2-user/Superapp_Backend
-            git pull origin main
+            # Use the correct folder (case-sensitive)
+            cd /home/ec2-user/superapp_backend || exit 1
+            
+            # Pull latest code
+            git pull origin main || exit 1
 
             # Install dependencies
-            npm install
+            npm install || exit 1
 
-            # Restart backend (assuming pm2)
-            pm2 stop all || true
-            pm2 start index.js --name superapp-backend
+            # Restart backend with PM2
+            pm2 stop superapp-backend || true
+            pm2 start index.js --name superapp-backend || exit 1
 
             echo "Backend deployment complete"
